# app_manager

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
app_manager/: CMakeLists.txt  package.xml  setup.py
app_manager/launch/: app_manager.launch
app_manager/scripts/: test_app.py
app_manager/src/app_manager/: __init__.py  app.py  app_list.py
app_manager/srv/: StartApp.srv
app_manager/test/: test_plugin.py  test_plugin.test  test_start_fail.py  test_start_fail.test
app_manager/test/plugin/: plugin.yaml  sample_node.py  test_plugin.py
app_notification_saver/: package.xml
app_notifier/: package.xml
app_notifier/src/app_notifier/: mail_notifier_plugin.py  speech_notifier_plugin.py  tweet_notifier_plugin.py  util.py
app_publisher/: README.md  package.xml
app_publisher/src/app_publisher/: rostopic_publisher_plugin.py
app_recorder/: README.md  app_recorder_plugin.yaml  package.xml
app_recorder/src/app_recorder/: __init__.py  result_recorder_plugin.py
app_scheduler/: package.xml
app_scheduler/apps/sample0/: sample0.l  sample0.xml
app_scheduler/apps/sample1/: sample1.l  sample1.xml
app_scheduler/apps/sample2/: sample2.l  sample2.xml
app_scheduler/apps/sample3/: sample3.l  sample3.xml
app_scheduler/src/app_scheduler/: app_scheduler.py
app_uploader/: package.xml
app_uploader/src/app_uploader/: gdrive_uploader_plugin.py
launch/: app_manager.launch
scripts/: app_manager  test_app.py
src/app_manager/: app.py  app_list.py  app_manager.py  app_manager_plugin.py  exchange.py  master_sync.py
srv/: StartApp.srv  StopApp.srv
test/: appA.app  test_app.py  test_app.test  test_plugin.py  test_plugin.test  test_plugin_fail.test  test_plugin_success.test  test_plugin_timeout.test  test_start_fail.py  test_stop_app.py
test/plugin/: package.xml  plugin.installed  sample_node.py  sample_node.xml  test_plugin.app  test_plugin.py  test_plugin_timeout.app
test/resources/: example-min.launch
