<?xml version="1.0"?>
<package format="3">
  <name>app_manager</name>
  <version>1.2.0</version>
  <description>app_manager</description>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/app_manager</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Jeremy Leibs</author>
  <author>Ken Conley</author>
  <author>Yuki Furuta</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rosgraph</build_depend>
  <build_depend>rosunit</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>rospack</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>rosunit</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Dependencies needed only for running tests. -->
  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-rosdep</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-rosdep</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosservice</test_depend>
  <test_depend>rospy_tutorials</test_depend>

</package>
